k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-ingress
  namespace: vaultwarden
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - vaultwarden.cdo.local # <--- Cambiado aquí
    secretName: oso-cloud-cert #antes --vault-tls
  rules:
  - host: vaultwarden.cdo.local # <--- Cambiado aquí
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden-service
            port:
              number: 80
